# fluxbb-rs

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  Dockerfile  Justfile  README.md  docker-compose.yml  postgres.md
.github/: FUNDING.yml
assets/styling/: Air.css  Modern.css  main.css  themes.css
db/: schema.sql  seed.sql
src/: data.rs  main.rs
src/components/: confirm_button.rs  forum_bits.rs  mod.rs  poll.rs
src/data/: admin.rs  auth.rs  bbcode.rs  db.rs  forum.rs  messages.rs  mod.rs  models.rs  polls.rs  rss.rs  security.rs
src/views/: admin.rs  auth.rs  edit_post.rs  forum.rs  help.rs  index.rs  install.rs  messages.rs  mod.rs  new_topic.rs  profile.rs  profile_edit.rs  rules.rs  search.rs  shell.rs  topic.rs  users.rs
